# CSF

./: .gitignore  CONTACT.md  LICENSE-Clarity.txt  Manifesto-v3-Fighting-the-Wrong-War.md  Manifesto-v3-You-Are-Fighting-the-Wrong-War.md  QUICKSTART.md  README.md  README.txt  README_en.md  RELEASE.md  context.md  安装与配置.html  引言v3：你们在拿着前朝的尚方宝剑，斩当朝的官.md
_dlog/: _dlog_373：发现严重问题.md  _dlog_374：回头梳理转发事件树的问题并定新修改方案.md  _dlog_375：修改问题.md  context-minimal-archive.md  dlog_001_建库.md  dlog_002_英文版宣言.md  dlog_003_琐事和csf-full商业价值的讨论.md  dlog_004_SEO，专栏文章.md  dlog_005_各种闲聊.md  dlog_006_用户分析和真实反馈.md  dlog_0615_与智能共事.md
clarity-dev/: DEVELOPER.md  RELEASE.md  build.bat  bump_version.py  clarity.spec  pyproject.toml  requirements.txt
clarity-dev/log/: devlog-001-开局.md  devlog-002-开局.md  devlog-003-开局.md
clarity-dev/scripts/: init_factory.py
clarity-dev/src/: __init__.py  config.py  main.py
clarity-dev/src/core/: __init__.py  backup_engine.py  file_system_ops.py  models.py  sentinel_parser.py
clarity-dev/src/data/: __init__.py  prompt_store.py
clarity-dev/src/service/: __init__.py  context_service.py  prompt_service.py  specs_service.py
clarity-dev/src/ui/: __init__.py  bootstrap_tab.py  context_tab.py  main_window.py  prompt_tab.py  specs_tab.py
clarity-dev/tests/: __init__.py  test_backup_engine.py  test_config.py  test_file_system_ops.py  test_integration_label1.py  test_main_window.py  test_models.py  test_prompt_data.py  test_prompt_service.py  test_prompt_ui.py  test_sentinel_parser.py  test_specs_service.py  test_specs_tab.py
csf-clarity/: scenes.json
(+252 files in other folders)
